Fix issue where flex alignment conflicts with height.

--- a/app/components/target-wrapper/target-wrapper.styl
+++ b/app/components/target-wrapper/target-wrapper.styl
@@ -103,7 +103,6 @@
 
       select
         display inline-block
-        height 2em
         border 1px solid lightLineGrayRGBA
         background transparent
         cursor pointer
